# acquifer-napari

./: README.md  setup.cfg  setup.py  tox.ini
acquifer_napari_plugin/: _reader.py  napari.yaml  utils.py
docs/: conf.py  index.rst
examples/: open_in_napari.py
viewer/: _reader.py  napari.yaml
viewer/_tests/: test_reader.py
