[metadata]
name = acquifer-viewer

author = Laurent Thomas
author_email = l.thomas@acquifer.de
license = GPL-3.0-only
url = https://github.com/LauLauThom/acquifer-viewer
description = Visualize IM datasets as a multi-dimensional image, using lazy data-loading thanks to Dask. 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/acquifer/napari-viewer-plugin/issues
    Documentation = https://github.com/acquifer/napari-viewer-plugin#README.md
    Source Code = https://github.com/acquifer/napari-viewer-plugin
    User Support = https://github.com/acquifer/napari-viewer-plugin/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    dask
    dask-image
    napari-plugin-engine>=0.1.4
    numpy
    sortedcontainers
    xarray

[options.entry_points] 
napari.plugin = 
    acquifer-viewer = viewer
